committed @jatkinson1000 's suggestion
Co-authored-by: Jack Atkinson <109271713+jatkinson1000@users.noreply.github.com>

--- a/slides/_type_hinting_short.qmd
+++ b/slides/_type_hinting_short.qmd
@@ -2,7 +2,7 @@
 
 ## Type Hinting {.smaller}
 
-- PEP484
+- [PEP484](https://peps.python.org/pep-0484/)
 - A solution to statically indicate the type of a value.
 
 - Yes in larger collaborative projects
