--- a/slides/_type_hinting_short.qmd
+++ b/slides/_type_hinting_short.qmd
@@ -4,6 +4,8 @@
 
 - [PEP484](https://peps.python.org/pep-0484/)
 - A solution to statically indicate the type of a value.
+- Python does not check type hints at runtime
+    - Needs an external typechecker (e.g. mypy)
 
 - Yes in larger collaborative projects
 - Not in scripts and hacking
