--- a/slides/_code_structure.qmd
+++ b/slides/_code_structure.qmd
@@ -97,9 +97,9 @@ def bpm(l):
  
 <!--=================================================================================-->
 
-## Exercise XX {.smaller}
+## Exercise 4 {.smaller}
 
- - Go to Exercise XX and try to think of how you can structure the code in the plotting.py file to avoid
+ - Go to Exercise 4 and try to think of how you can structure the code in the plotting.py file to avoid
  code duplication, and improve readability and reusability.
  - What enables the improved code you to do?
  - Now look at plotting_solution.py . Can you further adapt the code to allow, for example, for customised axis labels?
