--- a/slides/rse-skills.qmd
+++ b/slides/rse-skills.qmd
@@ -171,9 +171,8 @@ My background in this is domain science and numerical modelling on HPC.
 {{< include _comments_docstrings.qmd >}}
 
 <!-- ------------------------------------------------------------------------------ -->
-<!-- This section has been removed for the current version of the course
-{{< include _fstrings_config.qmd >}}
--->
+<!-- This section has been removed for the current version of the course -->
+<!-- {{< include _fstrings_config.qmd >}} -->
 <!-- ------------------------------------------------------------------------------ -->
 
 {{< include _readme_license.qmd >}}
